# trading-game

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENCE.md  Makefile  README.md  config.json  docker-compose.yml  traded_pairs.json  traders.json
crow/: crow_all.h
etc/nginx/sites-enabled/: fxbattle-proxy
example/: random_trader.py
examples/: README.md
examples/java/: FXBattleClient.java  Makefile  README.md  RandomTrader.java  build.gradle  pom.xml
examples/java/src/main/java/tradebot/: TradeBot.java
examples/java/src/main/java/tradebot/Repo/: Account.java  CurrencyPair.java  Market.java  TradeRepository.java  TradingException.java
examples/javascript/: Makefile  README.md  fxbattleclient.js  package.json  random_trader.js
examples/python/: README.md  fxbattleclient.py  position_consolidator.py  random_trader.py
exchange/: exchange_account.h  exchange_arbitragedestroyer.h  exchange_brokerage.h  exchange_currency.h  exchange_fxconversions.h  exchange_fxconverter.h  exchange_market.h  exchange_randomtrader.h
fxbattle/: fxbattle_cachelessjsonresponse.h  fxbattle_configuration.cpp  fxbattle_configuration.h  fxbattle_htmlresponse.h  fxbattle_main.cpp  fxbattle_metrics.cpp  fxbattle_metrics.h
scripts/: generate-traders.py
templates/: config.html  index.html
test/: exchange_account.test.cpp  exchange_arbitragedestroyer.test.cpp  exchange_brokerage.test.cpp  exchange_currency.test.cpp  exchange_fxconversions.test.cpp  exchange_fxconverter.test.cpp  exchange_main.test.cpp  exchange_market.test.cpp  exchange_randomtrader.test.cpp
